Cambiar colores acorde a la empresa real

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3168,11 +3168,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #42e011;
+  border-color: #42e011;
 }
 .btn-success .badge {
-  color: #5cb85c;
+  color: #42e011;
   background-color: #fff;
 }
 .btn-info {
