Eliminar div Team work, apuntaba a blog y no se requiere

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ ul.nav.navbar-nav li a.active {
 	position: relative;
 }
 .banner2{
-	background:url(../images/banner2.jpg)no-repeat 0px 0px;
+	background:url(../images/banner2.webp)no-repeat 0px 0px;
 	background-size:cover;
 	min-height: 650px;
 	position: relative;
